--- a/kinoite-packages.yaml
+++ b/kinoite-packages.yaml
@@ -1,14 +1,12 @@
 packages:
   - NetworkManager-config-connectivity-fedora
   - ark
-  - audiocd-kio
   - bluedevil
   - breeze-icon-theme
   - colord-kde
   - dolphin
   - ffmpegthumbs
   - filelight
-  - firewall-config
   - flatpak-kcm
   - fprintd-pam
   - kaccounts-integration-qt6
@@ -16,7 +14,6 @@ packages:
   - kcharselect
   - kde-connect
   - kde-gtk-config
-  - kde-inotify-survey
   - kde-partitionmanager
   - kde-settings-pulseaudio
   - kdebugsettings
@@ -29,7 +26,6 @@ packages:
   - kfind
   - khelpcenter
   - kinfocenter
-  - kio-gdrive
   - kjournald
   - kmenuedit
   - konsole
@@ -52,13 +48,11 @@ packages:
   - plasma-discover
   - plasma-discover-notifier
   - plasma-disks
-  - plasma-drkonqi
   - plasma-nm
   - plasma-nm-openconnect
   - plasma-nm-openvpn
   - plasma-nm-vpnc
   - plasma-pa
-  - plasma-print-manager
   - plasma-systemmonitor
   - plasma-thunderbolt
   - plasma-vault
@@ -78,3 +72,4 @@ packages:
   - systemd-oomd-defaults
   - udisks2
   - vlc-plugin-gstreamer
+  - kate
