--- a/kinoite-packages.yaml
+++ b/kinoite-packages.yaml
@@ -1,75 +1,81 @@
 packages:
-  - NetworkManager-config-connectivity-fedora
-  - ark
-  - bluedevil
-  - breeze-icon-theme
-  - colord-kde
-  - dolphin
-  - ffmpegthumbs
-  - filelight
-  - flatpak-kcm
   - fprintd-pam
-  - kaccounts-integration-qt6
-  - kaccounts-providers
-  - kcharselect
-  - kde-connect
-  - kde-gtk-config
-  - kde-partitionmanager
   - kde-settings-pulseaudio
-  - kdebugsettings
-  - kdegraphics-thumbnailers
-  - kdenetwork-filesharing
-  - kdeplasma-addons
-  - kdialog
-  - kdnssd
-  - kf6-baloo-file
-  - kfind
-  - khelpcenter
-  - kinfocenter
-  - kjournald
-  - kmenuedit
-  - konsole
-  - krdp
-  - krfb
-  - kscreen
-  - kscreenlocker
-  - kwalletmanager5
-  - kwin
-  - kwrite
   - libappindicator-gtk3
   - mesa-dri-drivers
   - mesa-vulkan-drivers
-  - pam-kwallet
+  - NetworkManager-config-connectivity-fedora
   - phonon-qt6-backend-vlc
   - pinentry-qt
-  - plasma-breeze
-  - plasma-desktop
-  - plasma-desktop-doc
-  - plasma-discover
-  - plasma-discover-notifier
-  - plasma-disks
-  - plasma-nm
-  - plasma-nm-openconnect
-  - plasma-nm-openvpn
-  - plasma-nm-vpnc
-  - plasma-pa
-  - plasma-systemmonitor
-  - plasma-thunderbolt
-  - plasma-vault
-  - plasma-welcome
-  - plasma-workspace
-  - plasma-workspace-wallpapers
-  - plasma-workspace-wayland
   - plymouth-system-theme
-  - polkit-kde
   - samba-usershares
   - sddm
-  - sddm-breeze
-  - sddm-kcm
-  - sddm-wayland-plasma
   - signon-kwallet-extension
-  - spectacle
   - systemd-oomd-defaults
   - udisks2
   - vlc-plugin-gstreamer
-  - kate
+
+repo-packages:
+  - repo: coprdep:copr.fedorainfracloud.org:solopasha:plasma-unstable
+    packages:
+      - bluedevil
+      - breeze-icon-theme
+      - flatpak-kcm
+      - kde-gtk-config
+      - kdeplasma-addons
+      - kf6-baloo-file
+      - kinfocenter
+      - kmenuedit
+      - krdp
+      - kscreen
+      - kscreenlocker
+      - kwin
+      - pam-kwallet
+      - plasma-breeze
+      - plasma-desktop
+      - plasma-desktop-doc
+      - plasma-discover
+      - plasma-discover-notifier
+      - plasma-disks
+      - plasma-nm
+      - plasma-nm-openconnect
+      - plasma-nm-openvpn
+      - plasma-nm-vpnc
+      - plasma-pa
+      - plasma-systemmonitor
+      - plasma-thunderbolt
+      - plasma-vault
+      - plasma-welcome
+      - plasma-workspace
+      - plasma-workspace-wallpapers
+      - plasma-workspace-wayland
+      - polkit-kde
+      - sddm-breeze
+      - sddm-kcm
+      - sddm-wayland-plasma
+      - spectacle
+  - repo: copr:copr.fedorainfracloud.org:solopasha:kde-gear-unstable
+    packages:
+      - ark
+      - colord-kde
+      - dolphin
+      - ffmpegthumbs
+      - filelight
+      - kaccounts-integration-qt6
+      - kaccounts-providers
+      - kate
+      - kcharselect
+      - kde-connect
+      - kde-partitionmanager
+      - kdebugsettings
+      - kdegraphics-thumbnailers
+      - kdenetwork-filesharing
+      - kdialog
+      - kdnssd
+      - kfind
+      - khelpcenter
+      - kjournald
+      - konsole
+      - krfb
+      - kwalletmanager5
+      - kwrite
