--- a/virt-manager.yaml
+++ b/virt-manager.yaml
@@ -1,5 +1,20 @@
 packages:
+  - libvirt-daemon-config-network
+  - libvirt-daemon-driver-interface
+  - libvirt-daemon-driver-network
+  - libvirt-daemon-driver-nodedev
+  - libvirt-daemon-driver-nwfilter
+  - libvirt-daemon-driver-qemu
+  - libvirt-daemon-driver-secret
+  - libvirt-daemon-driver-storage-disk
+  - libvirt-daemon-lock
+  - libvirt-daemon-plugin-lockd
+  - libvirt-daemon-proxy
+  - libvirt-dbus
+  - qemu-kvm
+  - virt-install
   - virt-manager
+  - virt-viewer
 
 exclude-packages:
   - nbdkit
