--- a/common.yaml
+++ b/common.yaml
@@ -28,6 +28,8 @@ include:
   - composefs.yaml
   - qemu-user-static-x86_64.yaml
   - virt-manager.yaml
+  # Compress initramfs with zstd
+  - initramfs-zstd.yaml
 
 conditional-include:
   # Manifests included only for the Bootable Container variants
