--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -156,18 +156,15 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - name: Get buildid
-        id: get-buildid
-        run: |
-          echo "buildid=$(date -u "+%Y%m%d.%H%M")" >> $GITHUB_OUTPUT
 
-      - name: Restore cache
-        id: cache
-        uses: actions/cache/restore@v4
-        with:
-          path: buildcache.tar.zst
-          key: build-${{ steps.get-buildid.outputs.buildid }}
-          restore-keys: build-
+
+      # - name: Restore cache
+      #   id: cache
+      #   uses: actions/cache/restore@v4
+      #   with:
+      #     path: buildcache.tar.zst
+      #     key: build-${{ steps.get-buildid.outputs.buildid }}
+      #     restore-keys: build-
 
       - name: Download nvidia repo
         uses: actions/cache/restore@v4
@@ -187,6 +184,11 @@ jobs:
         run: |
           sed -i "s|@@PATH@@|$(realpath nvidia-kmod-repo)|" nvidia.repo
           sed -i "s|@@PATH@@|$(realpath openh264-repo)|" openh264.repo
+
+      - name: Get buildid
+        id: get-buildid
+        run: |
+          echo "buildid=$(date -u "+%Y%m%d.%H%M")" >> $GITHUB_OUTPUT
 
       - name: Build
         id: build
@@ -227,13 +229,13 @@ jobs:
             "docker://${IMAGENAME}:${{ steps.build.outputs.version }}.${{ steps.get-buildid.outputs.buildid }}" \
             "docker://${IMAGENAME}:${{ steps.build.outputs.version }}"
 
-      - name: Compress the cache directory manually to preserve xattrs
-        run: |
-          bsdtar --zstd --options zstd:compression-level=16,zstd:threads=0 --acls --xattrs -cpaf buildcache.tar.zst cache
+      # - name: Compress the cache directory manually to preserve xattrs
+      #   run: |
+      #     bsdtar --zstd --options zstd:compression-level=16,zstd:threads=0 --acls --xattrs -cpaf buildcache.tar.zst cache
 
-      - name: Save cache
-        id: cache-save
-        uses: actions/cache/save@v4
-        with:
-          path: buildcache.tar.zst
-          key: ${{ steps.cache.outputs.cache-primary-key }}
+      # - name: Save cache
+      #   id: cache-save
+      #   uses: actions/cache/save@v4
+      #   with:
+      #     path: buildcache.tar.zst
+      #     key: ${{ steps.cache.outputs.cache-primary-key }}
