--- a/initramfs.yaml
+++ b/initramfs.yaml
@@ -1,6 +1,9 @@
 # Set dracut configuration for the initramfs
 # See: https://gitlab.com/fedora/bootc/base-images/-/blob/main/tier-0/initramfs.yaml
 # See: https://github.com/coreos/fedora-coreos-config/tree/testing-devel/overlay.d/05core/usr/lib/dracut/dracut.conf.d
+packages:
+  - tpm2-tss
+  - tpm2-tools
 postprocess:
   - |
     #!/usr/bin/env bash
