--- a/composefs.yaml
+++ b/composefs.yaml
@@ -2,7 +2,17 @@
 # See: https://fedoraproject.org/wiki/Changes/ComposefsAtomicDesktops
 postprocess:
   - |
-    #!/usr/bin/env bash
+    #!/usr/bin/bash
+    set -xeuo pipefail
+
+    install -dm 0755 -o 0 -g 0 /usr/lib/ostree
+    cat >> /usr/lib/ostree/prepare-root.conf << 'EOF'
+    [sysroot]
+    readonly = true
+    EOF
+
+  - |
+    #!/usr/bin/bash
     set -xeuo pipefail
 
     cat >> /usr/lib/ostree/prepare-root.conf << 'EOF'
