--- a/initramfs.yaml
+++ b/initramfs.yaml
@@ -4,15 +4,16 @@
 packages:
   - tpm2-tss
   - tpm2-tools
+  - zstd
 postprocess:
   - |
-    #!/usr/bin/env bash
+    #!/usr/bin/bash
     set -xeuo pipefail
 
     install -dm 0755 -o 0 -g 0 /usr/lib/dracut/dracut.conf.d
 
   - |
-    #!/usr/bin/env bash
+    #!/usr/bin/bash
     set -xeuo pipefail
 
     cat > /usr/lib/dracut/dracut.conf.d/20-atomic-nohostonly.conf << 'EOF'
@@ -21,7 +22,7 @@ postprocess:
     EOF
 
   - |
-    #!/usr/bin/env bash
+    #!/usr/bin/bash
     set -xeuo pipefail
 
     cat > /usr/lib/dracut/dracut.conf.d/20-atomic-nostrip.conf << 'EOF'
@@ -31,10 +32,21 @@ postprocess:
     EOF
 
   - |
-    #!/usr/bin/env bash
+    #!/usr/bin/bash
     set -xeuo pipefail
 
     cat > /usr/lib/dracut/dracut.conf.d/20-atomic-tpm-luks.conf << 'EOF'
     # Add support for systemd-cryptsetup and tpm2-tss LUKS locking
     add_dracutmodules+=" tpm2-tss systemd-pcrphase "
+    EOF
+
+  - |
+    #!/usr/bin/bash
+    set -xeuo pipefail
+
+    cat > /usr/lib/dracut/dracut.conf.d/20-atomic-zstd.conf << 'EOF'
+    # Compress initrd with zstd.  dracut defaults to -15, but we want the
+    # maximum reasonable compression, so override the command line to use
+    # dracut's defaults along with -19.
+    compress="zstd -19 -q -T0"
     EOF
