back to compose image

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -147,6 +147,7 @@ jobs:
             skopeo \
             tar \
             zstd
+          dnf -y upgrade --enablerepo=updates-testing --refresh --advisory=FEDORA-2025-ba4625cbe9
           cat << EOF > /etc/containers/registries.d/sigstore.yaml
           docker:
             $IMAGENAME:
@@ -206,10 +207,10 @@ jobs:
           echo "version=${version}" >> $GITHUB_OUTPUT
           echo "Composing kinoite ${version}.${{ steps.get-buildid.outputs.buildid }} ..."
 
-          rpm-ostree compose rootfs --cachedir=cache kinoite.yaml rootfs
-          rpm-ostree compose build-chunked-oci --bootc --format-version=1 \
-            --max-layers 99 --rootfs=rootfs \
-            --output containers-storage:localhost/kinoite:build
+          rpm-ostree compose image --cachedir=cache --initialize \
+               --max-layers 96 \
+              "kinoite.yaml" \
+              "kinoite.ociarchive"
 
       - name: Key
         env:
@@ -224,7 +225,7 @@ jobs:
           skopeo login --username "${{ github.repository_owner }}" --password "${{ secrets.GITHUB_TOKEN }}" ghcr.io
 
           skopeo copy ${SKOPEO_ARGS} \
-            "containers-storage:localhost/kinoite:build" \
+            "oci-archive:kinoite.ociarchive" \
             "docker://${IMAGENAME}:${{ steps.build.outputs.version }}.${{ steps.get-buildid.outputs.buildid }}"
 
           skopeo copy ${SKOPEO_ARGS} \
