--- a/common.yaml
+++ b/common.yaml
@@ -184,6 +184,7 @@ packages:
   - passwdqc
   - pciutils
   - pipewire-alsa
+  - pipewire-codec-aptx
   - pipewire-gstreamer
   - pipewire-jack-audio-connection-kit
   - pipewire-pulseaudio
