--- a/qemu-virt-manager.yaml
+++ b/qemu-virt-manager.yaml
@@ -1,4 +1,5 @@
 packages:
+  - libguestfs
   - libvirt-daemon-config-network
   - libvirt-daemon-driver-interface
   - libvirt-daemon-driver-network
