--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,10 @@ on:
   schedule:
     - cron: '0 6 * * *'
 
+concurrency:
+  group: image-build
+  cancel-in-progress: true
+
 jobs:
   nvidia-kmod:
     runs-on: ubuntu-latest
